# Cargo.toml

[package]
name = "project"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.4"  
bytemuck = "1.14"
futures-intrusive = "0.5"
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
tokio = { version = "1.0", features = ["full"] }
